--- a/index.html
+++ b/index.html
@@ -2047,7 +2047,7 @@ function optionPriceKeyInput(val) {
     { id: 12, name: '賀卡', price: 40, emoji: '💌', category: 'accessory' },
     { id: 13, name: '花盒', price: 120, emoji: '🎁', category: 'accessory' },
     { id: 14, name: '保鮮劑', price: 60, emoji: '💧', category: 'accessory' },
-    { id: 15, name: '盆栽', price: 0, emoji: '🌿', category: 'custom', isCustom: true },
+    { id: 15, name: '盆栽', price: 0, emoji: '🌿', category: 'custom', hasOptions: true, options: [880, 980, 1080, 1180] },
     {
       id: 16, name: '裝飾品', price: 70, emoji: '✨', category: 'decoration', hasSubItems: true, subItems: [
         { name: 'A款', emoji: '🅰️' },
